algorithm equivalence finished as much as I could

--- a/QuantEst/thesis/draft/nams.tex
+++ b/QuantEst/thesis/draft/nams.tex
@@ -4,7 +4,17 @@
 \usepackage{bm}
 \usepackage{xcolor}
 
+\usepackage[english]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{algorithm}
+% \usepackage{algpseudocode}
+% \usepackage{algorithmic}
+\usepackage[noend]{algpseudocode}
+
 \def\R{\rm I\!R}
 \def\x{\bm{x}}
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
