spectrum-like image of quantile batch vs sgd finished

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -43,12 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -123,37 +124,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_image(q_batches, q_sgds):\n",
     "#     draw only one line of q_batches, and one block of q_sgds\n",
+    "    print (\"-------- test draw_images()-----------\")\n",
     "    \n",
-    "    return None"
+    "    # how to set the beginning and the end?\n",
+    "    beginning, end = -5, 5\n",
+    "    q_batch_one_gen = q_batches[0]\n",
+    "    \n",
+    "    print (q_batch_one_gen)\n",
+    "    \n",
+    "    print (\"--------------- done -----------------\")\n",
+    "    return None\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.48610098 -0.30914006  0.14728036  0.00489237  0.6508779 ]\n",
-      " [-2.61064461 -0.14748842  0.48328977 -0.1663612  -0.48547244]\n",
-      " [ 0.82003433 -0.01219056  0.17217907  0.04371225  1.51591731]\n",
-      " [ 0.59556583  0.89956096 -0.30135147  1.40234715 -2.60350481]\n",
-      " [-0.1644905   0.37664169  0.35426881  0.98946032 -0.14422581]\n",
-      " [ 0.12407755  1.41173678  1.35196179 -0.02500737  2.1128174 ]\n",
-      " [-1.02117003 -0.35665341 -1.19453555  1.10170299 -0.59891911]\n",
-      " [-0.24803351 -0.15288007  0.38784422  1.35151766  1.30128051]\n",
-      " [ 0.03589115 -1.06944515  0.14869823 -2.21242658 -0.29021889]\n",
-      " [-0.38623941 -1.09637832 -0.7585291  -0.32613705  0.57108458]\n",
-      " [ 0.0764211   1.83340927  1.49653299  0.33621157  1.27374164]\n",
-      " [-1.14752644  0.63529581  1.21931406 -0.81587116  0.4765054 ]]\n"
+      "-------- test draw_images()-----------\n",
+      "[ 0.63413083  0.30355086 -1.95992722  1.96469575  0.32964549]\n",
+      "--------------- done -----------------\n"
      ]
     }
    ],
@@ -174,8 +175,8 @@
     "            q_sgd   = generate_q_sgd(dataset, step_size)\n",
     "            q_sgds[i][j] = q_sgd\n",
     "    draw_image(q_batches, q_sgds)\n",
-    "    print (q_batches)\n",
-    "    return\n",
+    "#     print (q_batches)\n",
+    "    return None\n",
     "\n",
     "compare_distributions(True, True, False)"
    ]
