code reconstruction, yet to finish

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -43,83 +43,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "\n",
+    "import io, os, sys, types\n",
+    "from IPython import get_ipython\n",
+    "from nbformat import read\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import import_ipynb\n",
+    "from plt_quantile_comparison import plot_quantile_shuffles, plot_quantile_generations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 5)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q_values = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
+    "q_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
     "N_generation = 12\n",
     "N_shuffle = 10\n",
-    "\n",
-    "a = np.zeros((N_shuffle, len(q_values)))\n",
-    "a.shape"
+    "N_q = len(q_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.07310707,  0.22070778, -0.28509463, -0.05076965],\n",
-       "       [ 0.04423327, -0.1456886 , -0.10179877,  0.11275124],\n",
-       "       [ 0.00741648,  0.2047395 , -0.08450196,  0.13094117]])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_dataset(distro, data_size):\n",
-    "    return np.random.normal(0, 0.1, (3,4))\n",
+    "    return np.random.normal(0, 0.1, (3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_q_batches((distro, data_size, test_generations)):\n",
+    "    return np.random.normal(0, 1, N_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_q_sgds(dataset, step_size, test_generations):\n",
+    "    return np.random.uniform(0, 2, N_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_qs(distro, data_size, test_generations):\n",
+    "    q_batches = 1\n",
+    "    q_sgds = 2\n",
+    "    return q_batches, q_sgds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_distributions(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
+    "#     q_batches = np.zeros((N_generation, N_q))\n",
+    "#     q_sgds = np.zeros((N_generation, N_shuffle, N_q))\n",
+    "    \n",
+    "#     # generate datasets\n",
+    "#     for i in range(N_generation):\n",
+    "#         dataset = generate_dataset(distro, data_size)\n",
+    "#         q_batch = generate_q_batch(dataset)\n",
+    "#         q_batches[i] = q_batch\n",
     "\n",
-    "# generate_dataset(True, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_q_batch(dataset):\n",
-    "    return np.random.normal(0, 1, len(q_values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_q_sgd(dataset, step_size):\n",
-    "    return np.random.uniform(0, 2, len(q_values))"
+    "#         # shuffle\n",
+    "#         for j in range(10):\n",
+    "#             np.random.shuffle(dataset)\n",
+    "#             q_sgd   = generate_q_sgd(dataset, step_size)\n",
+    "#             q_sgds[i][j] = q_sgd\n",
+    "            \n",
+    "#     draw_image(q_batches, q_sgds)\n",
+    "# #     print (q_batches)\n",
+    "    print('distro')\n",
+    "    return None\n",
+    "\n",
+    "# compare_distributions(True, True, False)"
    ]
   },
   {
@@ -128,78 +151,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_image(q_batches, q_sgds):\n",
-    "#     draw only one line of q_batches, and one block of q_sgds\n",
-    "    print (\"-------- test draw_images()-----------\")\n",
-    "    \n",
-    "    # how to set the beginning and the end?\n",
-    "    beginning, end = -5, 5\n",
-    "    q_batch_one_gen = q_batches[0]\n",
-    "    \n",
-    "    print (q_batch_one_gen)\n",
-    "    \n",
-    "    print (\"--------------- done -----------------\")\n",
-    "    return None\n",
-    "\n"
+    "def compare_step_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
+    "    print('step size')\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_data_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
+    "    print('data size')\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_data(feature, distro, data_size, step_size, test_generations=False):\n",
+    "    q_batches, q_sgds = generate_qs(distro, data_size, test_generations)\n",
+    "    if feature=='distro':\n",
+    "        compare_distributions(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
+    "    elif feature=='step size':\n",
+    "        compare_step_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
+    "    elif feature=='data size':\n",
+    "        compare_data_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
+    "    else:\n",
+    "        raise Exception(\n",
+    "            'Cannot compare data with regard to {}, please try one of the following: \\n distro \\n step size \\n data size'.format(feature))\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------- test draw_images()-----------\n",
-      "[ 0.63413083  0.30355086 -1.95992722  1.96469575  0.32964549]\n",
-      "--------------- done -----------------\n"
+      "data size\n"
      ]
     }
    ],
    "source": [
-    "def compare_distributions(distro, data_size, step_size):\n",
-    "    q_batches = np.zeros((N_generation, len(q_values)))\n",
-    "    q_sgds = np.zeros((N_generation, N_shuffle, len(q_values)))\n",
-    "    \n",
-    "    # generate datasets\n",
-    "    for i in range(N_generation):\n",
-    "        dataset = generate_dataset(distro, data_size)\n",
-    "        q_batch = generate_q_batch(dataset)\n",
-    "        q_batches[i] = q_batch\n",
-    "\n",
-    "        # shuffle\n",
-    "        for j in range(10):\n",
-    "            np.random.shuffle(dataset)\n",
-    "            q_sgd   = generate_q_sgd(dataset, step_size)\n",
-    "            q_sgds[i][j] = q_sgd\n",
-    "    draw_image(q_batches, q_sgds)\n",
-    "#     print (q_batches)\n",
-    "    return None\n",
-    "\n",
-    "compare_distributions(True, True, False)"
+    "compare_data(feature='data size', distro=1, data_size=2, step_size=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def compare_step_sizes(step_size, distro, data_size):\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_data_size(data_size, distro, setp_size):\n",
-    "    return"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
