Reconstruct main code for quantile estimation comparison

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,153 +63,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "q_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
-    "N_generation = 12\n",
-    "N_shuffle = 10\n",
+    "N_g = 12 # N_generation\n",
+    "N_s = 10 # N_shuffle\n",
     "N_q = len(q_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_dataset(distro, data_size):\n",
-    "    return np.random.normal(0, 0.1, (3,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_q_batches((distro, data_size, test_generations)):\n",
-    "    return np.random.normal(0, 1, N_q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_q_sgds(dataset, step_size, test_generations):\n",
-    "    return np.random.uniform(0, 2, N_q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_qs(distro, data_size, test_generations):\n",
-    "    q_batches = 1\n",
-    "    q_sgds = 2\n",
-    "    return q_batches, q_sgds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_distributions(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
-    "#     q_batches = np.zeros((N_generation, N_q))\n",
-    "#     q_sgds = np.zeros((N_generation, N_shuffle, N_q))\n",
+    "# Conduct experiments on quantile estimation with SGD with regards to different aspects\n",
+    "# Experiment results are shown in charts and tables\n",
+    "# \n",
+    "# Return: None? or charts and figures\n",
+    "#\n",
+    "# Inputs: \n",
+    "#     1. Parameters for the experiments\n",
+    "#         - Settings to change: one of {distro, datasize, stepsize} (all elements are lists/dict)\n",
+    "#         - Settings to control: the left two of {distro, datasize, stepsize}\n",
+    "#                                g_test, s_test\n",
+    "#     2. Values to show in the results\n",
+    "#         - q_values to be compared\n",
+    "#         - charts to be showen in {plt_res, plt_proc, plt_e}\n",
+    "#         - tables to be shown in {tbl_res, tbl_proc}\n",
+    "\n",
+    "def quantile_sgd_compare(distro, datasize, stepsize, \n",
+    "                            g_test=False, s_test=False, q_lst=q_vals, \n",
+    "                           charts={'plt_res', 'plt_proc', 'plt_e'}, tables={'tbl_res, tbl_proc'}):\n",
+    "    comp_setting, non_comp_settings, N_comp = get_compared_setting(distro, datasize, stepsize)\n",
     "    \n",
-    "#     # generate datasets\n",
-    "#     for i in range(N_generation):\n",
-    "#         dataset = generate_dataset(distro, data_size)\n",
-    "#         q_batch = generate_q_batch(dataset)\n",
-    "#         q_batches[i] = q_batch\n",
-    "\n",
-    "#         # shuffle\n",
-    "#         for j in range(10):\n",
-    "#             np.random.shuffle(dataset)\n",
-    "#             q_sgd   = generate_q_sgd(dataset, step_size)\n",
-    "#             q_sgds[i][j] = q_sgd\n",
-    "            \n",
-    "#     draw_image(q_batches, q_sgds)\n",
-    "# #     print (q_batches)\n",
-    "    print('distro')\n",
-    "    return None\n",
-    "\n",
-    "# compare_distributions(True, True, False)"
+    "    # generate data for charts and tables\n",
+    "    if is_usable(comp_setting):\n",
+    "        dataset, q_batches = generate_reusable_data()\n",
+    "    # for each round, generate all data and comparison results\n",
+    "    for i in range(N_comp):\n",
+    "        if not is_usable(comp_setting):\n",
+    "            dataset, q_batches = generate_reusable_data()\n",
+    "        q_sgd_res, q_sgd_proc = generate_q_sgds(dataset, stepsize, q_vals, g_test, s_test)\n",
+    "        plts = draw_charts(q_batches, q_sgd_res, q_sgd_proc, g_test, s_test, charts)\n",
+    "        tbls = draw_tables(q_batches, q_sgd_res, q_sgd_proc, g_test, s_test, tables)\n",
+    "    # have them together?\n",
+    "    \n",
+    "    return\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compare_step_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
-    "    print('step size')\n",
-    "    return"
+    "# plt: errorbar\n",
+    "# https://matplotlib.org/3.1.1/gallery/lines_bars_and_markers/errorbar_subsample.html#sphx-glr-gallery-lines-bars-and-markers-errorbar-subsample-py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_data_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations=False):\n",
-    "    print('data size')\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_data(feature, distro, data_size, step_size, test_generations=False):\n",
-    "    q_batches, q_sgds = generate_qs(distro, data_size, test_generations)\n",
-    "    if feature=='distro':\n",
-    "        compare_distributions(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
-    "    elif feature=='step size':\n",
-    "        compare_step_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
-    "    elif feature=='data size':\n",
-    "        compare_data_sizes(q_batches, q_sgds, distro, data_size, step_size, test_generations)\n",
-    "    else:\n",
-    "        raise Exception(\n",
-    "            'Cannot compare data with regard to {}, please try one of the following: \\n distro \\n step size \\n data size'.format(feature))\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data size\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "compare_data(feature='data size', distro=1, data_size=2, step_size=3)"
+    "a = None\n",
+    "a is None"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
