quantile_sgd_compare() fixed for generate_reusable_data() part

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -115,6 +115,7 @@
     "    else:\n",
     "        for size in datasize:\n",
     "            setting_lst.append([distro[0], size, q_lst, g_test, s_test])\n",
+    "    print (setting_lst)\n",
     "    return setting_lst"
    ]
   },
@@ -123,6 +124,13 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, [0.1, 0.3, 0.5, 0.9, 0.99], False, False], [2, 1, [0.1, 0.3, 0.5, 0.9, 0.99], False, False], [3, 1, [0.1, 0.3, 0.5, 0.9, 0.99], False, False], [4, 1, [0.1, 0.3, 0.5, 0.9, 0.99], False, False]]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -257,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,19 +324,19 @@
      "text": [
       "generate_reusable_data ('exp', 1000000, [0.1, 0.3, 0.5, 0.9, 0.99], True, True)\n",
       "(12, 10, 1000000) \n",
-      " 1.0001941930387976 1.0004488840075143 0.6931827223233628\n",
-      "[[0.10538998 0.35720256 0.69365347 2.30415313 4.6134684 ]\n",
-      " [0.10499811 0.35671514 0.69226767 2.30654708 4.63248386]\n",
-      " [0.10542005 0.35736    0.69267026 2.30316242 4.62886745]\n",
-      " [0.1055961  0.35653373 0.69407181 2.30105097 4.58915584]\n",
-      " [0.10545599 0.35584976 0.69243862 2.3037391  4.61686452]\n",
-      " [0.10549272 0.35590751 0.69209942 2.30179256 4.60381618]\n",
-      " [0.10581347 0.35648046 0.69360164 2.30411823 4.604285  ]\n",
-      " [0.10609764 0.3579037  0.69327699 2.29976107 4.61255554]\n",
-      " [0.10556783 0.35690718 0.69388946 2.30605824 4.61118002]\n",
-      " [0.10551677 0.35675801 0.69335542 2.30141322 4.59250822]\n",
-      " [0.10545847 0.35608252 0.69290431 2.30110405 4.61198041]\n",
-      " [0.10490853 0.35753267 0.69414946 2.30320757 4.59399617]]\n"
+      " 0.9999034936378891 1.0002577204535932 0.6928631958092716\n",
+      "[[0.10547028 0.3572514  0.69495467 2.30310341 4.60234149]\n",
+      " [0.10567014 0.35626851 0.69251095 2.30341015 4.60100511]\n",
+      " [0.10542288 0.35586933 0.6921345  2.29817475 4.60765051]\n",
+      " [0.10541072 0.35694838 0.69268425 2.30387933 4.62174621]\n",
+      " [0.10504822 0.35628694 0.6919059  2.30136075 4.5826878 ]\n",
+      " [0.10565782 0.35598138 0.69180675 2.30430292 4.60398364]\n",
+      " [0.10539599 0.35656933 0.69282979 2.30464898 4.6027081 ]\n",
+      " [0.10574974 0.35673494 0.69266046 2.30045767 4.61739305]\n",
+      " [0.1052071  0.35710159 0.69368236 2.30254107 4.59188449]\n",
+      " [0.10570816 0.35670704 0.69321639 2.30363613 4.61720431]\n",
+      " [0.10546119 0.35637999 0.69282301 2.30617245 4.59837913]\n",
+      " [0.10509111 0.35669309 0.69340076 2.30512209 4.6217217 ]]\n"
      ]
     }
    ],
@@ -348,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,18 +395,23 @@
     "                           charts={'plt_res', 'plt_proc', 'plt_e'}, tables={'tbl_res, tbl_proc'}):\n",
     "    dataset, q_batches = 0, 0\n",
     "    N_comp = get_n_comp(distro, datasize, stepsize)\n",
-    "    if len(stepsize)!=1:\n",
+    "    \n",
+    "    print (N_comp)\n",
+    "    \n",
+    "    if len(stepsize)==1:\n",
     "        setting_lst = generate_setting_lst(distro, datasize, q_lst, g_test, s_test)\n",
     "    else:\n",
-    "        dataset, q_batches = generate_reusable_data(distro, datasize, q_lst, g_test, s_test)\n",
-    "        \n",
+    "        dataset, q_batches = generate_reusable_data(distro[0], datasize[0], q_lst, g_test, s_test)\n",
+    "        print (dataset.shape, q_batches)\n",
+    "\n",
     "    # for each round, generate all data and comparison results\n",
     "    for i in range(N_comp):\n",
-    "        if len(setting_lst)!=1:\n",
+    "        if len(stepsize)==1:\n",
     "            print (\"generate the {}th dataset and q_batches\".format(i))\n",
     "            lst = setting_lst[i]\n",
     "            distro, datasize, q_lst, g_test, s_test = lst[0], lst[1], lst[2], lst[3], lst[4]\n",
     "            dataset, q_batches = generate_reusable_data(distro, datasize, q_lst, g_test, s_test)\n",
+    "            print (dataset.shape, q_batches)\n",
     "            q_sgd_res, q_sgd_proc = generate_q_sgds(dataset, stepsize, q_lst, g_test, s_test)\n",
     "        else:\n",
     "            print ('different q_sgd', i)\n",
@@ -413,27 +426,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_compared_setting() [1] [2] [4, 5]\n",
+      "get_compared_setting() ['gau 1'] [100] [2, 3, 4]\n",
       "step size\n",
+      "3\n",
+      "generate_reusable_data ('gau 1', 100, [0.1, 0.3, 0.5, 0.9, 0.99], True, False)\n",
+      "(12, 100) [[-23.62333892  -9.19081682  -0.79794357  18.91473365  37.97894605]\n",
+      " [-24.13639435  -6.97242004  -0.85398578  18.20687468  41.45425806]\n",
+      " [-15.90165152  -6.05168069   2.08176721  26.82313176  42.84113451]\n",
+      " [-19.10568246  -7.16856801   2.80144182  23.41060872  35.9572    ]\n",
+      " [-19.72066394  -8.11831581   3.88529659  29.36675737  46.28148199]\n",
+      " [-19.86753775  -9.86769591   0.65146582  22.76833742  29.78445232]\n",
+      " [-16.94340811  -7.50098772  -0.12258783  22.88168449  41.72763182]\n",
+      " [-23.39625436  -5.00641602   4.28856299  29.74279972  38.83326316]\n",
+      " [-19.97911495  -8.13402831   1.54195416  24.8938768   32.72577811]\n",
+      " [-20.07108511  -6.22554944  -0.55848903  28.97152843  43.4278944 ]\n",
+      " [-18.99926039  -7.06994621  -0.24780702  21.04037702  39.2583893 ]\n",
+      " [-20.28833445  -4.82197652   2.41053216  24.53318208  35.41429514]]\n",
       "different q_sgd 0\n",
-      "different q_sgd 1\n"
+      "different q_sgd 1\n",
+      "different q_sgd 2\n"
      ]
     }
    ],
    "source": [
-    "quantile_sgd_compare([1], [2], [4,5])"
+    "quantile_sgd_compare(['gau 1'], [100], [2, 3, 4], True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
